<resources>
    <string name="app_name">Meu App</string>
    <string name="limpar">LIMPAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="ok">OK</string>
    <string name="salvar">SALVAR</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="globe">Globe</string>
    <string name="info">Info</string>
    <string name="settings">Settings</string>
    <string name="warning">Warning</string>
    <string name="search">Search</string>
    <string name="operacoes">Operações</string>
    <string name="create">create</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="title_activity_edita_pessoa">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="facebook_app_id">453451606016553</string>
    <string name="fb_login_protocol_scheme">fb453451606016553</string>
    <string name="email">Email</string>
    <string name="userName">User Name</string>
</resources>
